# coding-report

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml  setup.cfg
coding_report/: message.py  run.py  settings.py  statistics.py  wakatime_statistics.py
coding_report/api/github/: github.py  settings.py
coding_report/api/github/models/: base.py  commit.py  repository.py
coding_report/api/github/tests/: conftest.py  test_github.py
coding_report/api/wakatime/: settings.py  wakatime.py
coding_report/api/wakatime/models/: duration.py
