[tool.poetry]
name = "coding-report"
version = "0.1.0"
description = "Collecting coding statistics from Github, Wakatime and Toggl."

readme = "README.md"

authors = [
  "velivir <vitaliyantonoff@gmail.com>"
]

license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.6.1"
python-dotenv = "^0.14.0"
requests = "^2.24.0"
python-telegram-bot = "^12.8"

[tool.poetry.dev-dependencies]
mypy = "^0.782"

add-trailing-comma = "^2.0.1"
autopep8 = "^1.5.4"

pre-commit = "^2.7.1"

wemake-python-styleguide = "^0.14.1"
flake8-pytest-style = "^1.3.0"

pytest = "^6.0.1"
pytest-pythonpath = "^0.7.3"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.4.1"
coverage-conditional-plugin = "^0.3.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
